Fix fragment background_rect coordinate space for ancestor clip mask.

Previously, we had forgotten to adjust to the space of the compositing
container.

Bug: 740517
Change-Id: Ica29b840be7c24dafff4a4d534d6e87e4f8f9bf5
Reviewed-on: https://chromium-review.googlesource.com/567301
Reviewed-by: Stephen Chenney <schenney@chromium.org>
Commit-Queue: Chris Harrelson <chrishtr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#485709}
Former-commit-id: b45467a31c1bd152920544cded6b571877d44846